<resources>
    <string name="app_name">Gaps project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- String of the login and Signup Layout -->
    <string name="header1">Find the best and the nearest place</string>
    <string name="header2">For your car</string>
    <string name="username">Username</string>
    <string name="pass">password</string>
    <string name="Signup">Sign up</string>
    <string name="name"> name</string>
    <string name="email">email</string>
    <string name="Register">Regiter</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
</resources>
