<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.android.gapsproject.MainActivity"
    >


    <LinearLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
        android:layout_margin="@dimen/image"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"

            />


    </LinearLayout>

        <RelativeLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/header1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/login_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header1"

                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/header2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/login_color"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header2"
                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">

                <EditText
                    android:id="@+id/username1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header2"
                    android:layout_marginRight="50dp"
                    android:fontFamily="cursive"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignBottom="@+id/password"
                android:layout_alignParentEnd="true"
                android:alpha="0.3"
                android:onClick="movetopage"
                android:background="@drawable/loginicon"
                 />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">


                <EditText

                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:layout_marginRight="50dp"
                    android:fontFamily="cursive"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
                >


            </android.support.design.widget.TextInputLayout>



        </RelativeLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundbutton"
            android:fontFamily="casual"
            android:onClick="gotocraeteacount"
            android:text="@string/Signup"
            android:textColor="@color/login_color"
            android:textStyle="bold" />
      </LinearLayout>

</FrameLayout>




