<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signuplayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup2"

    tools:context="com.android.gapsproject.MainActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/image"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"

                />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <!-- fist name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">

                <EditText
                    android:id="@+id/fname1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:hint="@string/fname"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <!-- lastname -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fname"
                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">

                <EditText
                    android:id="@+id/lname1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:hint="@string/lname"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <!-- username -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/usern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lname"

                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">

                <EditText
                    android:id="@+id/usern1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>
            <!--paasword-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usern"
                android:layout_marginLeft="@dimen/image"
                android:layout_marginRight="@dimen/image"
                android:textColorHint="@color/login_color">


                <EditText
                    android:id="@+id/pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/image"
                    android:fontFamily="cursive"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/login_color"
                    android:textColorHighlight="@color/login_color"
                    android:textColorHint="@color/login_color"
                    android:textStyle="bold" />
                >


            </android.support.design.widget.TextInputLayout>



        </RelativeLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/registerbutton"
            android:fontFamily="casual"
            android:onClick="Register"
            android:text="@string/Register"
            android:textColor="@color/login_color"
            android:textStyle="bold"
            android:alpha="0.8"/>
    </LinearLayout>

</FrameLayout>

